# open-gdm-server

./: Cargo.toml  README.md  Rocket.toml
src/: gdm_routes.rs  gdm_server.rs  main.rs  state.rs  util.rs
static/: update.version
