[package]
name = "open-gdm-server"
version = "1.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.73"
bytebuffer = "2.1.1"
colored = "2.0.4"
log = "0.4.20"
roa = { version = "0.6.1", features = ["router"] }
time = { version = "0.3.25", features = ["formatting"] }
tokio = { version = "1.31.0", default-features = false, features = ["rt", "macros", "rt-multi-thread", "fs"] }
hyper = { version = "1.0.0-rc.4", features = ["client", "http1"] }
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
http-body-util = "0.1.0-rc.3"